# FilesCache

./: .gitignore  .travis.yml  FilesCache.cabal  LICENSE  README.md  stack.yaml
src/: Env.hs  FileCache.hs  Files.hs  LRUCache.hs  Log.hs  Main.hs
