name:                FilesCache
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/barakb/FilesCache#readme
license:             BSD3
license-file:        LICENSE
author:              Barak Bar Orion
maintainer:          barak.bar@gmail.com
copyright:           Barak Bar Orion
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable FilesCache
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       FileCache, Files, Log, Env
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
                     , wai
                     , http-client
                     , HTTP
                     , http-types
                     , async
                     , http-conduit
                     , conduit
                     , conduit-extra
                     , resourcet
                     , directory
                     , mtl
                     , transformers
                     , network-uri
                     , safe-exceptions
                     , filepath
                     , unix
                     , text
                     , criterion
                     , warp == 3.2.22
